# ushio

./: .gitignore  Cargo.toml  README.md
.claude/: CLAUDE.md  ROADMAP.md
docs/: capture-format.md  cli-reference.md  getting-started.md  waf-detection.md  workflows.md
docs/dev/: architecture.md  contributing.md  testing.md
src/: capture.rs  diff.rs  har.rs  lib.rs  main.rs  output.rs  proxy.rs  replay.rs
tests/: integration.rs
tests/fixtures/: capture.json  simple.har
