[package]
name = "ushio"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Raskell Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/raskell-io/ushio"
homepage = "https://raskell.io"
documentation = "https://github.com/raskell-io/ushio"
description = "Deterministic edge traffic replay for understanding WAF and proxy behavior"
keywords = ["replay", "traffic", "har", "waf", "testing"]
categories = ["command-line-utilities", "network-programming", "development-tools::testing"]
readme = "README.md"

[[bin]]
name = "ushio"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["rustls-tls", "gzip", "brotli", "cookies"] }
http = "1.2"

# HAR parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env", "color"] }

# Output formatting
colored = "2.1"
tabled = "0.16"
similar = "2.6"

# Timing
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# URL handling
url = "2.5"

[dev-dependencies]
tempfile = "3.12"
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
